--- a/public/css/_video.scss
+++ b/public/css/_video.scss
@@ -164,6 +164,10 @@
     }
 }
 
+#videoTabContent {
+    padding-top: 10px;
+}
+
 @media screen and (max-width:991.98px) {
     .video {
         &_item {
