--- a/public/css/_video.scss
+++ b/public/css/_video.scss
@@ -90,7 +90,7 @@
             width: 100%;
             padding-bottom: 60%;
             position: relative;
-            video {
+            #popupVideo {
                 position: absolute;
                 width: 100%;
                 height: 100%;
@@ -112,6 +112,18 @@
                     height: 100%;
                     opacity: 0;
                 }
+            }
+        }
+        &_content {
+            display: none;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            top: 0;
+            left: 0;
+            &.active {
+                display: block;
             }
         }
         .modal-body {
