--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4920,7 +4920,7 @@ main {
   position: relative;
 }
 
-.videoPopup_main video {
+.videoPopup_main #popupVideo {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -4944,6 +4944,21 @@ main {
   width: 100%;
   height: 100%;
   opacity: 0;
+}
+
+.videoPopup_content {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  top: 0;
+  left: 0;
+}
+
+.videoPopup_content.active {
+  display: block;
 }
 
 .videoPopup .modal-body {
